# transformertf

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ATTENTION_LSTM.md  CLAUDE.md  ENCODER_DECODER_LSTM.md  PRETFTMBI-15-config.yaml  README.md  RELEASE.md  RNN_Packed_Sequences.md  TRANSFORMER_LSTM.md  alignment_demo.py  alignment_demo_simple.py  alignment_docs.rst  alignment_plot.py  mlp-ci.yml  mlp-models.yaml  pyproject.toml  release.md  test_pftft_config.yaml  xtft-conf.ipynb
docs/source/: alignment_docs.rst  api.rst  conf.py  configuration.rst  development.rst  evaluation.rst  examples.rst  extending_api.rst  faq.rst  index.rst  usage.rst
docs/source/tutorials/: 01_basic_forecasting.rst  index.rst
migration/: README.md  migrate.py  migrate_hyperparameter_names_v0.12.py  migrate_tft_encoder_alignment_v0.13.py  patch_add_legacy_target_flag_v0.11.py  patch_maxscaler_attributes_v0.10.py
migration/lib/: __init__.py  cli.py  common.py  hyperparameters.py  scaler_inheritance.py  tft_alignment.py  version_upgrades.py
sample_configs/: lstm_config.yml  phylstm_config.yml  phytsmixer_config.yml  tft_config.yml  tft_transfer.yml  transformer_config.yml  transformerv2_config.yml  tsmixer_config.yml
scripts/: README.md  fix_parameter_usage.py  fix_pytorch_api_calls.py  migrate_config_files.py  migrate_hyperparameter_names.py  migrate_project.py  migrate_test_files.py  migrate_tft_encoder_alignment.py  patch_legacy_target_compatibility.py  patch_v0.7_v0.8.py  patch_v0.9.2_v_0.10.0.py
sps_mlp_hystcomp/: __init__.py  _base_predictor.py  _encoder_decoder_base.py  _pete_predictor.py  _pftft_predictor.py  _tft_predictor.py
sps_mlp_hystcomp/predict/: __init__.py  _base_predictor.py  _pete_predictor.py  _predictor_base.py  _tft_predictor.py
tests/: TESTING.md  conftest.py  factories.py  sample_data.parquet  strategies.py  test_utils.py
tests/benchmark/: test_model_performance.py
tests/data/: conftest.py  test_datamodule_base.py  test_datamodule_transformer.py  test_datamodule_transformer_collate_fn.py  test_datamodule_transformer_integration.py  test_dataset.py  test_dataset_factory.py  test_divide_by_x_transform.py  test_downsample.py  test_encoder_dataset.py  test_encoder_decoder_predict_dataset.py  test_log_transform.py  test_predict_sample_generator.py  test_time_series_datamodule.py  test_time_series_sample_generator.py  test_time_series_sample_generator_pandas.py  test_timeseries_dataset.py  test_transform_builder.py  test_transformer_datamodule.py  test_transformer_dataset.py  test_transformer_sample_generator.py  test_transformer_sample_generator_pandas.py  test_transforms.py  test_window_generator.py  test_window_strategy.py
tests/data/datamodule/: test_packed_collate.py
tests/data/dataset/: test_encoder_dataset.py  test_encoder_decoder_padding.py  test_encoder_decoder_predict_dataset.py  test_encoder_feature_masking.py  test_length_shapes.py  test_timeseries_dataset.py  test_transformer_dataset.py
tests/data/transform/: test_delta_transform.py  (+9 more)
tests/integration/: test_training_pipeline.py
tests/mlp/: conftest.py  test_mlp.py
tests/models/: test_alignment_aware_masking.py  test_base_module.py  test_transformer_base_module.py  test_transformer_masked_loss.py
tests/modules/: test_running_normalizer.py
tests/nn/: test_add_and_norm.py  test_add_norm.py  test_gate_add_norm.py  test_gated_linear_unit.py  test_gated_residual_network.py  test_get_activation.py  test_get_loss.py  test_glu.py  test_grn.py  test_interpretable_multi_head_attention.py  test_masked_losses.py  test_multi_embedding.py  test_quantile_loss.py  test_resample_norm.py  test_temporal_conv_block.py  test_temporal_decoder.py  test_temporal_encoder.py  test_variable_selection.py  test_weighted_losses.py
tests/predict/: conftest.py  test_predict_pete.py  test_predict_pftft.py  test_predict_tft.py
tests/smoke/: __init__.py  test_basic_functionality.py
tests/utils/: test_configure_optimizers.py  test_get_activation.py  test_get_loss.py  test_ops.py  test_predict_encoder_decoder.py  test_predict_phylstm.py  test_sequence.py  test_sequence_torch_compile.py  test_torch_compile_packing.py  test_tune.py  test_tune_config.py
transformerft/: config.py
transformerft/data/: __init__.py  _datamodule.py  _dataset.py  _window_generator.py
transformerft/models/: _base_module.py
transformerft/modules/: _normalizer.py
transformerft/utils/: __init__.py  _ops.py  _signal.py
transformertf/: __init__.py  _mod_replace.py  config.py  main.py  tune.py
transformertf/callbacks/: __init__.py  _checkpoint.py  _log_hparams.py  _plot_bdot_hysteresis.py  _plot_hysteresis.py  _set_optimizer_lr.py  _set_optimizer_params.py
transformertf/data/: __init__.py  _covariates.py  _datamodule.py  _dataset.py  _dataset_factory.py  _downsample.py  _dtype.py  _sample_generator.py  _transform.py  _transform_builder.py  _window_generator.py  _window_strategy.py
transformertf/hysteresis/: base.py  hybrid.py  meshing.py  modes.py  polynomial.py  reconstruction.py  states.py  training.py  transform.py  visualization.py
transformertf/models/: __init__.py  _base_module.py  _base_transformer.py  _validation_mixin.py  tft.py  typing.py
transformertf/modules/: __init__.py  _normalizer.py
transformertf/nn/: __init__.py  _add_and_norm.py  _add_norm.py  _gate_add_norm.py  _get_activation.py  _get_loss.py  _glu.py  _grn.py  _interpretable_multi_head_attn.py  _mlp.py  _multi_embedding.py  _quantile_loss.py  _resample_norm.py  _scaled_dot_product_attn.py  _temporal_conv_block.py  _temporal_decoder.py  _temporal_encoder.py  _transformer_encoder.py  _variable_selection.py  _weighted_loss.py
transformertf/utils/: __init__.py  _activation.py  _compile.py  _configure_optimizer.py  _ops.py  _signal.py  chain_schedulers.py  loss.py  predict.py  sequence.py  tune.py  tune_config.py
tune_example/: lstm_config.yml  lstm_tune_ax.yml  lstm_tune_bayesopt.yml  lstm_tune_bohb.yml  lstm_tune_comparison.yml  lstm_tune_config.yml  lstm_tune_config.yml.bak  pbt_lstm.py  tune_lstm.py  tune_pbt.py
utils/: mlp_upload_model.py
(+219 files in other folders)
